# ddcui

./: .cproject  .gitignore  .project  BUILDING.md  CHANGELOG.md  CMakeLists.txt  ChangeLog  NEWS.md  README.md  Validate_CMAKE_BUILD_TYPE.cmake  callprt  cconfig.h.in  cmake_uninstall.cmake.in  config.h  ddcui.appdata.xml  ddcui.desktop  ddcui.pro  ddcui.qrc  ddcui_globals.h  feature_base_model.cpp  feature_base_model.h  feature_change_observer.cpp  feature_change_observer.h  feature_item_model.cpp  feature_item_model.h  feature_list_widget.cpp  feature_list_widget.h  feature_selection_dialog.cpp  feature_table_model.cpp  feature_table_model.h  feature_value.cpp  feature_value.h  feature_value_tableitem_abstract_editor.cpp  feature_value_tableitem_abstract_editor.h  feature_value_tableitem_cb_editor.cpp  feature_value_tableitem_cb_editor.h  feature_value_tableitem_cont_editor.cpp  feature_value_tableitem_cont_editor.h  feature_value_tableitem_delegate.cpp  feature_value_tableitem_delegate.h  (+48 more)
QtWaitingSpinner/: waitingspinnerwidget.cpp
base/: ddca_utils.h  ddcui_globals.cpp  ddcui_globals.h  debug_utils.cpp  debug_utils.h  feature_selector.cpp  feature_selector.h  global_state.h  monitor.h  other_options_state.cpp  other_options_state.h  vertical_scroll_area.cpp  vertical_scroll_area.h
src/: CMakeLists.txt  CMakeLists.txt.old  callprt  cconfig.h.in  ddcui.pro  ddcui.pro.old
src/action_dialogs/: debug_actions_dialog.cpp  debug_actions_dialog.h  debug_actions_dialog.ui
src/alt/list_model_view/: feature_item_model.cpp  feature_item_model.h  list_model_view_ui.cpp  list_model_view_ui.h
src/alt/list_widget/: feature_list_widget.cpp  feature_list_widget.h  feature_widget_extended.cpp  feature_widget_extended.h  list_widget_ui.h
src/alt/table_model_view/: feature_table_model.cpp  feature_table_model.h  feature_value_tableitem_abstract_editor.cpp  feature_value_tableitem_cb_editor.cpp  feature_value_tableitem_cb_editor.h  feature_value_tableitem_cont_editor.cpp  feature_value_tableitem_cont_editor.h  feature_value_tableitem_delegate.h  feature_value_tableitem_editor.cpp  feature_value_tableitem_editor.h
src/base/: core.cpp  core.h  ddca_utils.cpp  ddca_utils.h  ddcui_core.cpp  ddcui_core.h  ddcui_core_aux.c  ddcui_core_aux.h  ddcui_globals.cpp  ddcui_globals.h  ddcui_parms.cpp  ddcui_parms.h  debug_utils.cpp  debug_utils.h  enhanced_slider.cpp  enhanced_slider.h  feature_list.c  feature_list.h  feature_selector.cpp  feature_selector.h  global_state.cpp  global_state.h  help_viewer.cpp  help_viewer.h  hex_number_validator.cpp  hex_number_validator.h  hline_widget.cpp  hline_widget.h  monitor.h  nc_values_state.cpp  nc_values_state.h  number_entry_widget.cpp  number_entry_widget.h  other_options_state.cpp  other_options_state.h  user_interface_options_state.cpp  user_interface_options_state.h  widget_debug.cpp  widget_debug.h
src/c_util/: coredefs.h  data_structures.c  data_structures.h  ddcutil_config_file.c  file_util.c  file_util.h  glib_util.c  glib_util.h  msg_util.c  msg_util.h  report_util.c  report_util.h  simple_ini_file.c  string_util.c  string_util.h  traced_function_stack.c
src/cmdline/: cmd_parser.c  cmd_parser.h  cmd_parser_aux.c  cmd_parser_aux.h  ddcui_cmd_parser.c  ddcui_cmd_parser.h  ddcui_cmd_parser_aux.c  ddcui_cmd_parser_aux.h  ddcui_parsed_cmd.c  ddcui_parsed_cmd.h  parsed_cmd.c  parsed_cmd.h
src/core_widgets/: enhanced_combobox.cpp  enhanced_combobox.h  enhanced_slider.cpp  enhanced_slider.h  enhanced_spinbox.cpp  enhanced_spinbox.h  hex_number_validator.cpp  hline_widget.cpp  hline_widget.h  number_entry_widget.cpp  number_entry_widget.h  spin_slider.cpp  spin_slider.h
src/feature_scrollarea/: feature_widget.cpp  feature_widget.h  feature_widget_header.cpp  feature_widget_header.h  features_scrollarea.cpp  features_scrollarea.h  features_scrollarea_contents.cpp  features_scrollarea_contents.h  features_scrollarea_ui.cpp  features_scrollarea_ui.h  features_scrollarea_view.cpp  features_scrollarea_view.h
src/feature_scrollarea/unused/: page_change_observer.cpp
src/feature_value_widgets/: value_2button_widget.cpp  value_2button_widget.h  value_abstract_widget.cpp  value_abstract_widget.h  value_base_widget.cpp  value_base_widget.h  value_bytes_widget.cpp  value_bytes_widget.h  value_cnc_widget_x14.cpp  value_cnc_widget_x14.h  value_cont_widget.cpp  value_cont_widget.h  value_nc_widget.cpp  value_nc_widget.h  value_ncplus_widget.cpp  value_ncplus_widget.h  value_new_cont_widget.cpp  value_new_cont_widget.h  value_reset_widget.cpp  value_reset_widget.h  value_simple_cont_widget.cpp  value_simple_cont_widget.h  value_special_widget_x62.cpp  value_special_widget_x62.h  value_stacked_widget.cpp  value_stacked_widget.h  value_std_widget.cpp  value_std_widget.h
src/feature_value_widgets/old/: value_cont_widget.cpp  value_cont_widget.h
src/help/: help_browser.cpp  help_browser.h  help_dialog.cpp  help_dialog.h  help_dialog3.cpp  help_dialog3.h  help_dialog3.ui
src/help/old/: help_dialog0.cpp  help_dialog0.h  help_dialog0.ui
src/imported/QtWaitingSpinner/: waitingspinnerwidget.cpp
src/main/: callback_manager.cpp  callback_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_ui.cpp  mainwindow_ui.h  monitor.cpp  msgbox_thread.cpp  msgbox_thread.h  ui_mainwindow2.h  uimainwindow2.h
src/monitor_desc/: monitor_desc_actions.cpp  monitor_desc_actions.h  monitor_desc_ui.cpp  monitor_desc_ui.h
src/nongui/: ddc_error.cpp  ddc_error.h  ddca_simulator.cpp  ddca_simulator.h  feature_base_model.cpp  feature_base_model.h  feature_value.cpp  feature_value.h  msgbox_queue.cpp  msgbox_queue.h  vcprequest.cpp  vcprequest.h  vcpthread.cpp  vcpthread.h
src/old/imported/QtWaitingSpinner/: waitingspinnerwidget.cpp
src/option_dialogs/: feature_selection_dialog.cpp  feature_selection_dialog.h  feature_selection_dialog.ui  nc_values_dialog.cpp  nc_values_dialog.h  nc_values_dialog.ui  other_options_dialog.cpp  other_options_dialog.h  other_options_dialog.ui  user_interface_options_dialog.cpp  user_interface_options_dialog.h  user_interface_options_dialog.ui
(+130 files in other folders)
